# haskell-to-scala

./: README.md
haskell-examples/: haskell-examples.cabal  stack.yaml
haskell-examples/app/: LensesMain.hs  TypeClassesMain.hs
haskell-examples/src/: Lenses.hs  TypeClasses.hs
scala-examples/: .gitignore  build.sbt
scala-examples/src/main/scala/: AnotherExample.scala  Example.scala  Example2.scala  TypeClasses.scala
