name:           haskell-examples
version:        0.0.0.1
synopsis:       haskell-examples
author:         Sofia Kochkova
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     TypeClasses
                     , Lenses
  build-depends:       base
                     , lens
                     , text
  ghc-options:     -Wall -O2
  default-language: Haskell2010

executable type-classes
  hs-source-dirs:      app
  main-is:             TypeClassesMain.hs
  build-depends:       base
                     , haskell-examples
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

executable lenses
  hs-source-dirs:      app
  main-is:             LensesMain.hs
  build-depends:       base
                     , haskell-examples
                     , lens
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

